# django_blog

./: Dockerfile  amvera.yml  pyproject.toml  requirements.txt  start.sh
mysite/blog/: admin.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
mysite/blog/static/css/: blog.css
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: detail.html  list.html
mysite/mysite/: settings.py
