[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "egarmin_is",email = "egarmin_is@magnit.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.0,<6.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
